--- a/minccinoorg.html
+++ b/minccinoorg.html
@@ -19,14 +19,11 @@
     </head>
     <body>
         <p>
-            <a href="https://minccino.org/members">
-            <img class="left-fit" src="minccino.jpg">
+            <a href="https://twitter.com/fuyuotolyx/status/1623087219933052928?s=20">
+            <img class="left-fit" src="0158b.gif">
             </a>
             </p>
-    <audio controls autoplay>
-      <source src="024 - Waterfall Cave.mp3" type="audio/mpeg">
-    </audio>
-    <!-- The Minccino Organization doesn't hide any secrets! What are you doing here? -->
+    <!-- SHOO!!!! SHOO!!!!!!!! 1000 bugs will crawl up into your house! Out of here, now! -->
     </body>
     </html>
     
