--- a/index.html
+++ b/index.html
@@ -1,29 +1,6 @@
 
 <html>
-    <head>
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
-            .imgbox {
-                display: grid;
-                height: 90%;
-            }
-            .center-fit {
-                max-width: 100%;
-                max-height: 100vh;
-                margin: auto;
-            }
-        </style>
-    </head>
-    <body>
-        <p>
-            <a href="https://twitter.com/fuyuotolyx/status/1623087219933052928?s=20">
-            <img class="left-fit" src="0158b.gif">
-            </a>
-            </p>
+<p>there will be a blog here eventually. please wait!</p>
     <!-- SHOO!!!! SHOO!!!!!!!! 1000 bugs will crawl up into your house! Out of here, now! -->
-    </body>
-    </html>
+</html>
     
