--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<title>Snowy's Website</title>
+<link rel="icon" href="Aki_Icon.ico" />
 <html>
 <p>there will be a blog here eventually. please wait!</p>
     <!-- SHOO!!!! SHOO!!!!!!!! 1000 bugs will crawl up into your house! Out of here, now! -->
