--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <html>
 <p>there will be a blog here eventually. please wait!</p>
     <!-- SHOO!!!! SHOO!!!!!!!! 1000 bugs will crawl up into your house! Out of here, now! -->
+<p>For now, you can look at my very bare <a href="https://snowyminccino.art/notebook">notebook</a>...</p>
 </html>
     
