--- a/notebook.html
+++ b/notebook.html
@@ -1,4 +1,5 @@
 <title>Snowy's Website</title>
 <link rel="icon" href="Aki_Icon.ico" />
+<p><a href="https://snowyminccino.art/note82823938">August 28th, 2023 - 9:38 PM ET</a></p>
 <p><a href="https://snowyminccino.art/note82123911">August 21st, 2023 - 9:11 PM ET</a></p>
 <p><a href="https://snowyminccino.art/note82123859">August 21st, 2023 - 8:59 PM ET</a></p>
